<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/new_task_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_task"
        android:padding="16dp"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:inputType="textCapSentences"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calendar_btn"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/design_default_color_primary_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_task_editText"
        android:text="@string/select_date_reminder" />

    <Button
        android:id="@+id/new_task_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calendar_btn"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>